# MeowMix

./: .gitignore  CMakeLists.txt
include/: audio.h  input.h  rendering.h
src/: main.cpp
src/audio/: initAudio.cpp  loadWav.cpp
src/input/: initKeyBinds.cpp  musicFun.cpp  pollEvents.cpp
src/rendering/: initRender.cpp
